# scratchpad

./: CMakeLists.txt  readme.md
.build/: build.sh  config-clang_x64_debug.sh
bench/: CMakeLists.txt  vec_erase_idx_b.cpp
config/: FindCatch.cmake
doc/: CMakeLists.txt  Doxyfile.in  vec_erase_idx_bench.md
src/: CMakeLists.txt  bitpack.hpp  book-of-semaphores.cpp  bufbuf.go  bufbuf.hpp  constructor_tmpl_param_deduction.cpp  exception_neutral_cpp.cpp  frame_ipc.cpp  ipc_unix_sockets.cpp  ipc_unix_sockets.go  main.cpp  maker.hpp  shmufbuf.hpp  udp_ipc_server_sends.cpp  vector_erase_indexes.hpp
test/: CMakeLists.txt  bitpack_t.cpp  bufbuf_t.cpp  example_t.cpp  vec_erase_idx_t.cpp
